# avro_model

./: .gitignore  README.md  pyproject.toml
avro_model/: __init__.py
avro_model/src/: __init__.py  avro_scheme.py  avro_serializer.py  python_to_avro_values.py
tests/: test_avro_model.py
